# NotificationBot

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  NotificationBot  NotificationBot.py  README.md  cmake_install.cmake  main.py  output.txt  settings.py  setup.py
docs/: doc.md
include/: export.h  weather.h
lib/: libcurl.dylib
libraries/cpr/: CTestTestfile.cmake
libraries/cpr/cpr/: CTestTestfile.cmake
libraries/cpr/opt/: CTestTestfile.cmake
libraries/cpr/opt/curl/: CTestTestfile.cmake
libraries/cpr/opt/curl/CMake/: cmake_uninstall.cmake
libraries/cpr/opt/curl/docs/: CTestTestfile.cmake
libraries/cpr/opt/curl/docs/cmdline-opts/: CTestTestfile.cmake
libraries/cpr/opt/curl/docs/libcurl/: CTestTestfile.cmake
libraries/cpr/opt/curl/docs/libcurl/opts/: CTestTestfile.cmake
libraries/cpr/opt/curl/lib/: CTestTestfile.cmake
libraries/cpr/opt/googletest/: CTestTestfile.cmake
libraries/cpr/opt/mongoose/: CTestTestfile.cmake
libraries/cpr/test/: CTestTestfile.cmake
mail/: gmail.py
nba/: league.py  nba_data.py  nbadata.py  setup.py  team.py
src/: export.cpp  main.cpp  weather.cpp
weather/: helpers.py  setup.py  w_data.py  weather.py  weatherdata.py
weather/data/: countrycodes.json
